opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/expect_test_helpers_core"
bug-reports: "https://github.com/janestreet/expect_test_helpers_core/issues"
dev-repo: "git+https://github.com/janestreet/expect_test_helpers_core.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/expect_test_helpers_core/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "base_quickcheck"
  "core"
  "ppx_jane"
  "sexp_pretty"
  "stdio"
  "dune"            {>= "3.11.0"}
  "re"              {>= "1.8.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Helpers for writing expectation tests"
description: "
This library provides helper functions for writing expect tests.

If you want helpers for writing expect tests using the Async library,
look at expect_test_helpers_async.
"
